# src/v1/routes/users/orders.route.js
@@ -6,7 +6,7 @@ router.use(bodyParser.json())
 
 const { users } = require('../../controllers')
 
-router.put('/id/:id', users.orders.update)
+router.put('/id/:id/cancel', users.orders.update)
 router.get('/id/:id', users.orders.findOne)
 router.post('/price-calculator', users.orders.priceCalculator)
 router.get('/', users.orders.findAll)
